<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_menu_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/browserMenu"
        android:icon="@drawable/ic_earth_menu_24dp"
        android:title="@string/browser"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/pauseAllMenu"
        android:title="@string/pause_all" />

    <item
        android:id="@+id/resumeAllMenu"
        android:title="@string/resume_all" />

    <item
        android:id="@+id/settingsMenu"
        android:icon="@drawable/ic_settings_menu_24dp"
        android:title="@string/settings" />

    <!--    <item-->
    <!--        android:id="@+id/aboutMenu"-->
    <!--        android:title="@string/about" />-->
    <item
        android:id="@+id/rateMenu"
        android:title="@string/rate_app" />
    <item
        android:id="@+id/moreMenu"
        android:title="@string/more_apps" />
    <item
        android:id="@+id/shareAppMenu"
        android:title="@string/share_app" />
    <item
        android:id="@+id/policyMenu"
        android:title="@string/term_and_policy" />

    <item
        android:id="@+id/shutdownAppMenu"
        android:title="@string/shutdown" />
</menu>
