<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="FragmentAppearanceSettings"
        android:persistent="false"
        android:title="@string/pref_header_appearance" />

    <Preference
        android:key="FragmentBehaviorSettings"
        android:persistent="false"
        android:title="@string/pref_header_behavior" />

    <Preference
        android:key="FragmentLimitationsSettings"
        android:persistent="false"
        android:title="@string/pref_header_limitations" />

    <Preference
        android:key="FragmentStorageSettings"
        android:persistent="false"
        android:title="@string/pref_header_storage" />

    <Preference
        android:key="FragmentBrowserSettings"
        android:persistent="false"
        android:title="@string/pref_header_browser" />
</PreferenceScreen>
