<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/deleteMenu"
        android:icon="@drawable/ic_delete_menu_24dp"
        android:title="@string/delete"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/shareMenu"
        android:icon="@drawable/ic_share_menu_24dp"
        android:title="@string/share"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/shareUrlMenu"
        android:title="@string/share_url"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/selectAllMenu"
        android:icon="@drawable/ic_select_all_menu_24dp"
        android:title="@string/select_all"
        app:showAsAction="ifRoom|withText" />
</menu>
